docs/v4.0.2/_sources/gallery/single/farfield.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/single/farfield.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_single_farfield.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_single_farfield.py:


Far-Fields Computation and Visualization
========================================

This example demonstrates the process of computing and visualizing the far-fields of a scatterer using PyMieSim.

.. GENERATED FROM PYTHON SOURCE LINES 9-10

Importing the package: PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 10-34

.. code-block:: Python

    from PyMieSim.units import ureg

    from PyMieSim.single.scatterer import Sphere
    from PyMieSim.single.source import Gaussian
    from PyMieSim.single.representations import FarField

    source = Gaussian(
        wavelength=1000 * ureg.nanometer,  # 1000 nm
        polarization=30 * ureg.degree,  # Right circular polarization
        optical_power=1 * ureg.watt,  # Arbitrary units
        NA=0.3 * ureg.AU,  # Numerical Aperture
    )

    scatterer = Sphere(
        diameter=1500 * ureg.nanometer,  # 1500 nm
        source=source,
        refractive_index=1.4 * ureg.RIU,  # Refractive index of the scatterer
        medium_refractive_index=1.0 * ureg.RIU,  # Refractive index of the surrounding medium
    )

    far_fields = FarField(scatterer=scatterer, sampling=100)  # Specify the number of sampling points


    figure = far_fields.plot()



.. image-sg:: /gallery/single/images/sphx_glr_farfield_001.png
   :alt: farfield
   :srcset: /gallery/single/images/sphx_glr_farfield_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /opt/hostedtoolcache/Python/3.11.14/x64/lib/python3.11/site-packages/PyMieSim/single/representations/far_fields.py:237: PyVistaDeprecationWarning: 
    ../../../../../../../../opt/hostedtoolcache/Python/3.11.14/x64/lib/python3.11/site-packages/PyMieSim/single/representations/far_fields.py:237: Arguments 'theta', 'phi', 'r', 'u', 'v', 'w' must be passed as keyword arguments to function 'transform_vectors_sph_to_cart'.
    From version 0.50, passing these as positional arguments will result in a TypeError.
      x, y, z = pyvista.transform_vectors_sph_to_cart(theta, phi, radius, *vector)
    /opt/hostedtoolcache/Python/3.11.14/x64/lib/python3.11/site-packages/PyMieSim/single/representations/far_fields.py:237: PyVistaDeprecationWarning: 
    ../../../../../../../../opt/hostedtoolcache/Python/3.11.14/x64/lib/python3.11/site-packages/PyMieSim/single/representations/far_fields.py:237: Arguments 'theta', 'phi', 'r', 'u', 'v', 'w' must be passed as keyword arguments to function 'transform_vectors_sph_to_cart'.
    From version 0.50, passing these as positional arguments will result in a TypeError.
      x, y, z = pyvista.transform_vectors_sph_to_cart(theta, phi, radius, *vector)
    /opt/hostedtoolcache/Python/3.11.14/x64/lib/python3.11/site-packages/PyMieSim/single/representations/far_fields.py:189: PyVistaDeprecationWarning: 
    ../../../../../../../../opt/hostedtoolcache/Python/3.11.14/x64/lib/python3.11/site-packages/PyMieSim/single/representations/far_fields.py:189: Arguments 'theta', 'phi', 'r', 'u', 'v', 'w' must be passed as keyword arguments to function 'transform_vectors_sph_to_cart'.
    From version 0.50, passing these as positional arguments will result in a TypeError.
      x, y, z = pyvista.transform_vectors_sph_to_cart(theta, phi, radius, *vector)
    /opt/hostedtoolcache/Python/3.11.14/x64/lib/python3.11/site-packages/PyMieSim/single/representations/far_fields.py:189: PyVistaDeprecationWarning: 
    ../../../../../../../../opt/hostedtoolcache/Python/3.11.14/x64/lib/python3.11/site-packages/PyMieSim/single/representations/far_fields.py:189: Arguments 'theta', 'phi', 'r', 'u', 'v', 'w' must be passed as keyword arguments to function 'transform_vectors_sph_to_cart'.
    From version 0.50, passing these as positional arguments will result in a TypeError.
      x, y, z = pyvista.transform_vectors_sph_to_cart(theta, phi, radius, *vector)





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 4.533 seconds)


.. _sphx_glr_download_gallery_single_farfield.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: farfield.ipynb <farfield.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: farfield.py <farfield.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: farfield.zip <farfield.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
